# Movie-Review-App

./: .gitignore  README.md  file_handling.py  main.py  movie_reviews.json  pyproject.toml  requirements.txt  scraper.py  summary.py  t1.py  t2.py
.streamlit/: config.toml
